Update interproscan_array.sh